force-app/main/default/objects/SmokeTestAlertRoute__mdt/SmokeTestAlertRoute__mdt.object-meta.xml
<CustomObject>
    <description>Per-persona alert routing configuration for smoke test results. Defines which channel (InApp, Email, Slack, Teams), which recipient role, which scenarios trigger alerts, and whether to include detailed results. Protected visibility prevents subscriber orgs from reading WebhookSecret__c values via Metadata API.</description>
    <label>Smoke Test Alert Route</label>
    <pluralLabel>Smoke Test Alert Routes</pluralLabel>
</CustomObject>