force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/AlertOnFail__c.field-meta.xml
<CustomField>
    <fullName>AlertOnFail__c</fullName>
    <description>When true, this alert route fires when a smoke test execution fails or when any scenario within an execution fails. This is the primary trigger for most alert routes. Defaults to true.</description>
    <label>Alert On Fail</label>
    <type>Checkbox</type>
</CustomField>