force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/AlertOnPass__c.field-meta.xml
<CustomField>
    <fullName>AlertOnPass__c</fullName>
    <description>When true, this alert route fires for passing smoke test executions in addition to failures. Useful for QA teams and DevOps pipelines that need confirmation notifications when deployments succeed. Defaults to false to minimize alert noise.</description>
    <label>Alert On Pass</label>
    <type>Checkbox</type>
</CustomField>