force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/CallbackUrlPattern__c.field-meta.xml
<CustomField>
    <fullName>CallbackUrlPattern__c</fullName>
    <description>Allowed webhook callback URL hostname pattern for SSRF prevention. When populated, the SmokeTestApiValidator will permit inbound webhookCallbackUrl values whose hostname matches this value. Compared case-insensitively. Leave blank for alert routes that do not need to contribute to the webhook allow-list. Example: hooks.slack.com</description>
    <label>Callback URL Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>