force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Notification channel for this alert route. InApp sends a Salesforce in-app notification. Email sends to the recipient role address. Slack and Teams post to the configured webhook URL.</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InApp</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>