force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <description>When true, this alert route is active and will be evaluated during alert dispatch. Disabled routes are silently skipped.</description>
    <label>Enabled</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>