force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/IncludeDetails__c.field-meta.xml
<CustomField>
    <fullName>IncludeDetails__c</fullName>
    <description>When true, the alert payload includes the full scenario-level details: error messages, stack traces, and scenario execution timings. When false, only the summary result (pass/fail count, overall status) is included. Disable for Business Owner routes where technical detail adds noise.</description>
    <label>Include Details</label>
    <type>Checkbox</type>
</CustomField>