force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/RecipientRole__c.field-meta.xml
<CustomField>
    <fullName>RecipientRole__c</fullName>
    <description>Human-readable role name identifying who receives alerts from this route (e.g., Team Lead, Business Owner, QA Engineer, System Administrator). The alert routing service resolves this to actual user records or role hierarchies at runtime.</description>
    <label>Recipient Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>