force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/ScenarioFilter__c.field-meta.xml
<CustomField>
    <fullName>ScenarioFilter__c</fullName>
    <description>Comma-separated list of BusinessProcess__c tag values from SmokeTestScenario__mdt. When populated, alerts are only sent for scenario failures matching one of these tags (e.g., Sales,Lead Management). When blank, alerts apply to all scenario failures regardless of business process tag.</description>
    <label>Scenario Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>