force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/WebhookSecret__c.field-meta.xml
<CustomField>
    <fullName>WebhookSecret__c</fullName>
    <description>HMAC signing secret used to authenticate outbound webhook payloads to Slack or Teams endpoints. This field is Protected — its value cannot be read from subscriber orgs via the Metadata API. Default records use a placeholder value; replace with the actual secret per-org after deployment. Never commit real secrets to source control.</description>
    <label>Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>