force-app/main/default/objects/SmokeTestAlertRoute__mdt/fields/WebhookUrl__c.field-meta.xml
<CustomField>
    <fullName>WebhookUrl__c</fullName>
    <description>Webhook endpoint URL for Slack or Teams alert channels. Must be a valid HTTPS URL pointing to an incoming webhook integration. Default records use a placeholder value; replace with the actual webhook URL in each target org after deployment. Not applicable for InApp or Email channels.</description>
    <label>Webhook URL</label>
    <type>Url</type>
</CustomField>